--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <body>
 
     <header>
-        <h1>Website Title</h1>
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
+
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="script.html">Script</a></li>
                 <li><a href="style.html">CSS</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+
+            <div class="social-icons">
+                <a href="#" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            </div>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Welcome to the Home Page</h2>
-            <p>This is the main content of the home page.</p>
-        </section>
+        <!-- Your main content goes here -->
     </main>
 
     <footer>
