--- a/index.html
+++ b/index.html
@@ -1,150 +1,18 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Your Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #555;
-            padding: 10px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        .slideshow {
-            max-width: 100%;
-            overflow: hidden;
-        }
-
-        .slideshow img {
-            width: 100%;
-            height: auto;
-        }
-
-        .content {
-            text-align: justify;
-        }
-
-        .blog-post {
-            margin-top: 20px;
-        }
-
-        .team-section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-
-        .team-member {
-            text-align: center;
-            margin: 10px;
-        }
-
-        .brand-logos {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .brand-logo {
-            max-width: 100px;
-            max-height: 50px;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>Your Website</h1>
-    </header>
-
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#blog">Blog</a>
-        <a href="#team">Meet the Team</a>
-        <a href="#brands">Brands</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <section id="home" class="slideshow">
-        <!-- Slideshow content goes here -->
-        <img src="slide1.jpg" alt="Slide 1">
-        <img src="slide2.jpg" alt="Slide 2">
-        <img src="slide3.jpg" alt="Slide 3">
-    </section>
-
-    <section id="about" class="content">
-        <h2>About Us</h2>
-        <p>Your website's about us content goes here.</p>
-    </section>
-
-    <section id="services" class="content">
-        <h2>Our Services</h2>
-        <p>Your website's services content goes here.</p>
-    </section>
-
-    <section id="blog" class="blog-post content">
-        <h2>Latest Blog Post</h2>
-        <p>Your blog post content goes here.</p>
-        <button>Read More</button>
-    </section>
-
-    <section id="team" class="team-section content">
-        <div class="team-member">
-            <h3>Team Member 1</h3>
-            <p>Role: Developer</p>
-        </div>
-        <div class="team-member">
-            <h3>Team Member 2</h3>
-            <p>Role: Designer</p>
-        </div>
-        <!-- Add more team members as needed -->
-    </section>
-
-    <section id="brands" class="brand-logos">
-        <img src="brand1.png" alt="Brand 1 Logo" class="brand-logo">
-        <img src="brand2.png" alt="Brand 2 Logo" class="brand-logo">
-        <!-- Add more brand logos as needed -->
-    </section>
-
+    <!-- The content of your HTML body remains unchanged -->
+    <!-- ... -->
     <footer>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
