--- a/index.html
+++ b/index.html
@@ -5,14 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Your Website</title>
 </head>
 <body>
-    <!-- The content of your HTML body remains unchanged -->
+    <header>
+        <img src="your-logo.png" alt="Your Logo" class="logo">
+        <h1>Your Website</h1>
+    </header>
+
+    <nav>
+        <div class="navbar">
+            <div class="nav-left">
+                <!-- Logo and Page List -->
+                <img src="your-logo.png" alt="Your Logo" class="logo-mobile">
+                <ul class="pages">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#team">Meet the Team</a></li>
+                    <li><a href="#brands">Brands</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="nav-right">
+                <!-- Social Media Icons -->
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- The rest of your HTML content remains unchanged -->
     <!-- ... -->
+
     <footer>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
+
