--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Wl4BnH1zgj/Zizc9moNUEAPa2QKA6apdV4c8AJKMvzPryiFns1e9e1Wz0E2X3i63S2aXY3/9Q2UaFn4WCTz2/9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Your Website</title>
 </head>
 <body>
     <header>
-        <img src="your-logo.png" alt="Your Logo" class="logo">
-        <h1>Your Website</h1>
-    </header>
-
-    <nav>
         <div class="navbar">
-            <div class="nav-left">
-                <!-- Logo and Page List -->
-                <img src="your-logo.png" alt="Your Logo" class="logo-mobile">
-                <ul class="pages">
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+            </div>
+            <div class="pages">
+                <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -29,14 +25,14 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="nav-right">
-                <!-- Social Media Icons -->
+            <div class="social-icons">
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
                 <a href="#" class="fa fa-instagram"></a>
+                <!-- Add more social media icons as needed -->
             </div>
         </div>
-    </nav>
+    </header>
 
     <!-- The rest of your HTML content remains unchanged -->
     <!-- ... -->
@@ -44,8 +40,6 @@
     <footer>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
-
