--- a/index.html
+++ b/index.html
@@ -3,51 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colorful Website Template</title>
+  <title>Full-Width Automatic Slideshow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <nav class="navbar">
-      <a href="#" class="logo">Colorful Website</a>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="image1.jpg" style="width:100%">
+    </div>
 
-  <main class="main">
-    <section class="hero">
-      <h1>Welcome to Colorful Website</h1>
-      <p>This is a colorful website template with a responsive mobile-friendly navigation bar.</p>
-    </section>
+    <div class="mySlides fade">
+      <img src="image2.jpg" style="width:100%">
+    </div>
 
-    <section class="about">
-      <h2>About Us</h2>
-      <p>We are a team of passionate designers and developers who love creating beautiful and user-friendly websites.</p>
-    </section>
+    <div class="mySlides fade">
+      <img src="image3.jpg" style="width:100%">
+    </div>
 
-    <section class="contact">
-      <h2>Contact Us</h2>
-      <form action="#">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
-
-        <button type="submit">Submit</button>
-      </form>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>&copy; 2023 Colorful Website</p>
-  </footer>
+    <div class="caption-container">
+      <button class="caption-button">Slide Caption</button>
+    </div>
+  </div>
 </body>
 </html>
