--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="slideshow-container">
     <div class="mySlides fade">
-      <img src="image1.jpg" style="width:100%">
+      <img src="13.png" style="width:100%">
     </div>
 
     <div class="mySlides fade">
@@ -17,7 +17,7 @@
     </div>
 
     <div class="mySlides fade">
-      <img src="image3.jpg" style="width:100%">
+      <img src="13.png" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
